[package]
name = "khang_first_project"
version = "0.1.0"
authors = ["khang-nghiem <31397614+khang-nghiem@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.4"
dotenv = "0.15.0"


[dev-dependencies]
reqwest = "0.11.3"
tokio = "1.6.1"
